# hex64

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/: article.md  index.md  project_architecture.md
hex64-diagnostic/: README.md  main.py  pyproject.toml
hex64-diagnostic/hex64_diagnostic/clibs/: clibs_manager.py
hex64-diagnostic/hex64_diagnostic/clibs/src/: ram.c
hex64-diagnostic/hex64_diagnostic/config/: constants.py
hex64-diagnostic/hex64_diagnostic/infrastructure/benchmarks/: cpu_benchmarks.py
hex64-diagnostic/hex64_diagnostic/infrastructure/sensors/: disk.py  ram.py
hex64-diagnostic/hex64_diagnostic/interfaces/gui/: application_ui.py  hex64gui.py
hex64-diagnostic/hex64_diagnostic/utils/: data_convertor.py
hex64_diagnostic/: __init__.py
hex64_diagnostic/domain/entities/: hardware.py
hex64_diagnostic/infrastructure/data/: processor_info.py
hex64_diagnostic/infrastructure/repositories/: benchmark_repository.py  hardware_repository.py
hex64_diagnostic/infrastructure/sensors/: cpu.py  network.py  temp.py
hex64_diagnostic/interfaces/gui/: application.ui  application_ui.py
hex64_diagnostic/interfaces/gui/resources/: style.css
hex64_diagnostic/plots/: plots_generator.py
hex64_diagnostic/utils/: other.py
